<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <Button
        android:id="@+id/add_food_photo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/add_food_photo" />

    <Button
        android:id="@+id/view_nutrition_history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_food_photo"
        android:text="@string/view_nutrition_history" />

    <Button
        android:id="@+id/todays_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_nutrition_history"
        android:text="@string/todays_menu" />

</RelativeLayout>