<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PictureTaker" >

    <item
        android:id="@+id/menu_item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_item_add"/>

    <item
        android:id="@+id/menu_item_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_item_gallery"/>

    <item
        android:id="@+id/menu_item_deleteAll"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_item_deleteAll"/>

    <item
        android:id="@+id/menu_item_main_menu"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="ifRoom|withText"
        android:title="Go to Main Menu"
        />

</menu>
